refactor(framework): 更新注解和流操作以提高代码质量